// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectsRoot snapshot tests should match snapshot 1`] = `
<section
  className="projects-root first-slide"
  data-testid="projects-root"
>
  <div
    className="scroll"
  >
    <Background />
    <Animations />
  </div>
</section>
`;

exports[`ProjectsRoot snapshot tests should match snapshot with second slide 1`] = `
<section
  className="projects-root second-slide"
  data-testid="projects-root"
>
  <div
    className="scroll"
  >
    <Background />
    <Animations />
  </div>
</section>
`;
